--- a/action.yml
+++ b/action.yml
@@ -5,10 +5,10 @@ inputs:
   username:
     description: 'username'
     required: true
-  server:  
+  server:
     description: 'your sftp server'
     required: true
-  port: 
+  port:
     description: 'your sftp server port, default to 22'
     required: true
     default: "22"
@@ -37,7 +37,7 @@ inputs:
     description: "SSH passsword，If a password is set, the secret key pair is ignored"
     required: false
   rsyncArgs:
-    description: "Additional arguments for the rsync command. 
+    description: "Additional arguments for the rsync command.
       You can use this parameter to customize the rsync behavior, such as excluding files or directories.
       Example: '--exclude=node_modules --exclude=.git --exclude=*.log'.
       If set, these arguments will be passed directly to the rsync command."
@@ -49,7 +49,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://harbor.zzmark.top/bolian/sftp-deploy-action:v1.2.7'
   args:
     - ${{ inputs.username }}
     - ${{ inputs.server }}
@@ -61,10 +61,10 @@ runs:
     - ${{ inputs.sftpArgs }}
     - ${{ inputs.delete_remote_files }}
     - ${{ inputs.password }}
-    - ${{ inputs.rsyncArgs }}  
-    - ${{ inputs.ssh_passphrase }}  
+    - ${{ inputs.rsyncArgs }}
+    - ${{ inputs.ssh_passphrase }}
 
 
 branding:
-  icon: 'upload-cloud'  
+  icon: 'upload-cloud'
   color: 'purple'
